--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:with-positions": "VITE_ENABLE_POSITIONS_BY_COMPANY=true vite build",
     "preview": "vite preview"
   },
   "dependencies": {
